# UK-Skeleton

./: .gitignore  CMakeLists.txt  README.md
src/: DisplayError.h  DisplayError_SDL2.cpp  Game.cpp  Game.h  GameDef.h  GameMode_Editor.cpp  GameMode_Editor.h  GameMode_Title.cpp  GameMode_Title.h  Main.cpp  Main.h  Map.cpp  Map.h  Render.cpp  Render.h
src/Backend/: Backend.h  Core.h  Input.h  Render.h
src/Backend/SDL2/: Core.cpp  Input.cpp  Render.cpp
src/Util/: Error.cpp  Error.h  TextureData.cpp  TextureData.h
